2001-08-28  Jody Goldberg <jgoldberg@home.com>

	* src/xml-io.c (xml_sheet_read) : no need to load the max col/row.
	  That is really only useful for external parsers.  We handle it
	  internally.

2001-08-28  Morten Welinder  <terra@diku.dk>

	* src/workbook.h (struct _Workbook): point to first dependent
 	directly, not via an slist.

	* src/eval.h (struct _Dependent): Add prev and next fields.

	* src/eval.c (dependent_unlink, dependent_unlink_sheet): Fix-up
 	unlinking.
	(dependent_link): Link using new double-linked structure.
	(sheet_region_queue_recalc): Use new dependent linking structure.
	(workbook_queue_all_recalc): Make an slist of dependents here.

	* src/workbook-control-gui.c (TOGGLE_HANDLER/display_formulas):
 	Adapt to new dependent linking structure.

	* src/workbook.c (workbook_expr_relocate): Adapt to new dependent
 	linking structure.

2001-08-28  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-control-gui.c (scg_mode_edit) : fix a warning on exit
	  when closing 1 of many open sheets.

	* src/gnumeric-graph.c : make the debug spew conditional.
	(CMANAGER1) : new macro.
	(gnm_graph_new) : add more safety checks.
	(gnm_graph_arrange_vectors) : use the versioning macros.
	(gnm_graph_import_specification) : new routine.

	* idl/gnumeric-graphs.idl (importSpecification) : new routine.

	* src/xml-io.c : clean up.
	s/xml_get_value_int/xml_node_get_int/
	s/xml_set_value_int/xml_node_set_int/
	s/xml_get_value_double/xml_node_get_double/
	s/xml_set_value_double/xml_node_set_double/
	s/xml_set_value_points/xml_node_set_points/
	s/xml_set_value_cstr/xml_node_set_cstr/
	s/xml_set_prop_cellpos/xml_node_set_cellpos/
	s/xml_get_prop_cellpos/xml_node_get_cellpos/
	s/xml_read_range/xml_node_get_range/
	s/xml_get_print_hf/xml_node_get_print_hf/
	s/xml_set_print_hf/xml_node_set_print_hf/
	s/xml_set_color_value/xml_node_set_color/
	s/xml_get_color_value/xml_node_get_color/
	s/xml_set_value_color/xml_node_set_gdkcolor/
	s/xml_get_value_color/xml_node_get_gdkcolor/